fixed some spacing

--- a/src/style.css
+++ b/src/style.css
@@ -126,7 +126,7 @@ p {
 
 /* FOOTER */
 .contact-box {
-  padding: 50px 300px;
+  padding: 30px 300px;
   background: var(--secondary-color);
 }
 
